added icons to navbar items

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <nav class="navbar">
     <h1>Alpharetta</h1>
     <ul class="nav-links">
-        <li>Favorites</li>
-        <li>Filter</li>
-        <li>About</li>
+        <li><a><img class="svg" src="img/list.svg">Favorites</a></li>
+        <li><a><img class="svg" src="img/filter.svg">Filter</a></li>
+        <li><a><img class="svg" src="img/info.svg">About</a></li>
     </ul>
 
 </nav>
