Correct placement of speech bubbles, added lists to filter and favorites
Signed-off-by: walker frederick <walkerfrederick@outlook.com>

--- a/index.html
+++ b/index.html
@@ -15,22 +15,26 @@
     <ul class="nav-links">
         <li onclick="showBubble(this)"><a class="nav-link"><img class="svg" src="img/like.svg">Favorites<img class="svg arrow" src="img/arrow.svg"></a>
             <div id="favoriteBubble" class="speech-bubble">
-                <p><strong>Map of Alpharetta</strong></p>
-                <p>This application was built for the Udacity Front-End Nanodegree program. It was built by
-                    <a target="_blank" href="https://walkerfrederick.com/">Walker Frederick</a> and if you want to see
-                    the source code, feel free to check-out the Github repo
-                    <a target="_blank" href="https://github.com/WalkerFrederick/neighborhoodmap">Here!</a>
-                </p>
+                <p><strong>Favorites</strong></p>
+                <ul class="favorites-list">
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                </ul>
             </div>
         </li>
         <li onclick="showBubble(this)"><a class="nav-link"><img class="svg" src="img/filter.svg">Filter<img class="svg arrow" src="img/arrow.svg"></a>
             <div id="filterBubble" class="speech-bubble">
-                <p><strong>Map of Alpharetta</strong></p>
-                <p>This application was built for the Udacity Front-End Nanodegree program. It was built by
-                    <a target="_blank" href="https://walkerfrederick.com/">Walker Frederick</a> and if you want to see
-                    the source code, feel free to check-out the Github repo
-                    <a target="_blank" href="https://github.com/WalkerFrederick/neighborhoodmap">Here!</a>
-                </p>
+                <p><strong>Filter</strong></p>
+                <ul class="filter-list">
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                    <li>Papa Johns</li>
+                </ul>
             </div>
         </li>
         <li onclick="showBubble(this)"><a class="nav-link"><img class="svg" src="img/info.svg">About<img class="svg arrow" src="img/arrow.svg"></a>
