now getting data from yelp
Signed-off-by: walker frederick <walkerfrederick@outlook.com>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </li>
         <li onclick="showBubble(this)"><a class="nav-link"><img class="svg" src="img/filter.svg">Filter<img class="svg arrow" src="img/arrow.svg"></a>
             <div id="filterBubble" class="speech-bubble">
-                <p><strong>Filter</strong></p>
+                <p><strong>Categories</strong></p>
                 <ul class="filter-list">
                     <li>Papa Johns</li>
                     <li>Papa Johns</li>
