--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
 <nav class="navbar">
     <h1>Alpharetta</h1>
     <ul class="nav-links">
-        <li onclick="showBubble(this)"><a class="nav-link"><img class="svg" src="img/like.svg">Favorites<img class="svg arrow" src="img/arrow.svg"></a>
-            <div id="favoriteBubble" class="speech-bubble">
-                <p><strong>Favorites</strong></p>
-                <ul class="favorites-list">
-                    <li>Papa Johns</li>
-                    <li>Papa Johns</li>
-                    <li>Papa Johns</li>
-                    <li>Papa Johns</li>
-                    <li>Papa Johns</li>
+        <li onclick="showBubble(this)"><a class="nav-link"><img class="svg" src="img/like.svg">locations<img class="svg arrow" src="img/arrow.svg"></a>
+            <div id="locationBubble" class="speech-bubble">
+                <p><strong>locations</strong></p>
+                <ul class="locations-list" data-bind="foreach: locations">
+                    <li data-bind="text: name"></li>
                 </ul>
             </div>
         </li>
@@ -57,10 +53,16 @@
 <script src="js/app.js"></script>
 <!--  KNOCKOUT  -->
 <script src="js/knockout-3.4.2.js"></script>
-<script>ko.applyBindings(mapViewModel)</script>
+<script>
+
+    let myObservableArray = ko.observableArray();    // Initially an empty array
+    myObservableArray.push('Some value');            // Adds the value and notifies observers
+
+</script>
 <!--  GOOGLE MAPS  -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYCbLWQnPsQ4oVA-aKScMVuw-aHOsNOdA&callback=initMap&style=element:geometry%7Ccolor:0xebe3cd&style=element:labels.text.fill%7Ccolor:0x523735&style=element:labels.text.stroke%7Ccolor:0xf5f1e6&style=feature:administrative%7Celement:geometry%7Cvisibility:off&style=feature:administrative%7Celement:geometry.stroke%7Ccolor:0xc9b2a6&style=feature:administrative.land_parcel%7Celement:geometry.stroke%7Ccolor:0xdcd2be&style=feature:administrative.land_parcel%7Celement:labels%7Cvisibility:off&style=feature:administrative.land_parcel%7Celement:labels.text.fill%7Ccolor:0xae9e90&style=feature:landscape.natural%7Celement:geometry%7Ccolor:0xdfd2ae&style=feature:poi%7Cvisibility:off&style=feature:poi%7Celement:geometry%7Ccolor:0xdfd2ae&style=feature:poi%7Celement:labels.text%7Cvisibility:off&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x93817c&style=feature:poi.park%7Celement:geometry.fill%7Ccolor:0xa5b076&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x447530&style=feature:road%7Celement:geometry%7Ccolor:0xf5f1e6&style=feature:road%7Celement:labels.icon%7Cvisibility:off&style=feature:road.arterial%7Celement:geometry%7Ccolor:0xfdfcf8&style=feature:road.highway%7Celement:geometry%7Ccolor:0xf8c967&style=feature:road.highway%7Celement:geometry.stroke%7Ccolor:0xe9bc62&style=feature:road.highway.controlled_access%7Celement:geometry%7Ccolor:0xe98d58&style=feature:road.highway.controlled_access%7Celement:geometry.stroke%7Ccolor:0xdb8555&style=feature:road.local%7Celement:labels%7Cvisibility:off&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x806b63&style=feature:transit%7Cvisibility:off&style=feature:transit.line%7Celement:geometry%7Ccolor:0xdfd2ae&style=feature:transit.line%7Celement:labels.text.fill%7Ccolor:0x8f7d77&style=feature:transit.line%7Celement:labels.text.stroke%7Ccolor:0xebe3cd&style=feature:transit.station%7Celement:geometry%7Ccolor:0xdfd2ae&style=feature:water%7Celement:geometry.fill%7Ccolor:0xb9d3c2&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x92998d&size=480x360"
         async defer></script>
 
 </body>
 </html>
+
