filters will remove markers that don't match the filter
Signed-off-by: walker frederick <walkerfrederick@outlook.com>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
     </ul>
 
 </nav>
+
 <div id="map"></div>
+
+<div class="error-msg">
+    <span>:(</span>
+    <h1>Sorry, There was a problem loading some data.</h1>
+    <h2>Please try again later!</h2>
+
+</div>
 
 
 <!--  APP.JS  -->
