fixed issue where markers wouldn't change on a second click, also added bounce to the selected icon
Signed-off-by: walker frederick <walkerfrederick@outlook.com>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta name="author" content="John Doe">
+    <meta name="author" content="Walker">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" href="./css/styles.css">
+
+    <title>Alpharetta Map</title>
 </head>
 <body>
 <nav class="navbar">
